<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Application title - DO NOT TRANSLATE -->
    <string name="app_name">
        <xliff:g>DashClock Birthday Extension</xliff:g>
    </string>

    <!-- Displayed in DashClock Settings -->
    <string name="extension_title">
        Birthday
    </string>
    <string name="extension_description">
        Display a reminder for your contact birthdays
    </string>
    
    <!-- Contact information -->
    <string name="single_birthday_title_format">
        <xliff:g id="contact_name">%1$s</xliff:g>\'s birthday
    </string>
    <!-- Age of the contact -->
    <plurals name="age_format">
        <item quantity="one">
            <xliff:g id="contact_age">%1$s</xliff:g> year old
        </item>
        <item quantity="other">
            <xliff:g id="contact_age">%1$s</xliff:g> years old
        </item>
    </plurals>

    <!-- When is the contact birthday ? -->
    <string name="when_days_format" tools:ignore="PluralsCandidate">
        in <xliff:g id="how_many_days_until_birthday">%1$d</xliff:g> days
    </string>
    <!-- Special case when the birthday is today -->
    <string name="when_today_format">
        today!
    </string>
    <!-- Special case when the birthday is tomorrow -->
    <string name="when_tomorrow_format">
        tomorrow
    </string>

    <!-- General settings title -->
    <string name="settings_title">
        <xliff:g>DashClock Birthday</xliff:g> Settings
    </string>

    <!-- Set the number of days we look for future birthday -->
    <string name="pref_days_limit_title">
        Days limit
    </string>
    <string name="pref_days_limit_default" translatable="false">
        7
    </string>
    <!-- Today only -->
    <string name="pref_days_limit_0_summary_format">
        Notify birthdays for today
    </string>
    <plurals name="pref_days_limit_summary_format">
        <!-- Today and tomorrow -->
        <item quantity="one">
            Notify birthdays for tomorrow
        </item>
        <!-- N days in the future -->
        <item quantity="other">
            Notify birthdays for the next <xliff:g id="days_limit">%1$d</xliff:g> days
        </item>
    </plurals>

    <!-- Switch (ON/OFF): what happens when the user click on the extension -->
    <string name="pref_show_quickcontact">
        <xliff:g>QuickContact</xliff:g>
    </string>
    <!-- QuickContact enabled description -->
    <string name="pref_show_quickcontact_on">
        Show <xliff:g>QuickContact</xliff:g> badge on tap
    </string>
    <!-- QuickContact disabled description -->
    <string name="pref_show_quickcontact_off">
        Show Contacts application on tap
    </string>

    <!-- Switch (ON/OFF): disable localization -->
    <string name="pref_disable_localization" tools:ignore="MissingTranslation">
        Disable language localization (experimental)
    </string>
    <!-- Localization is disabled -->
    <string name="pref_disable_localization_on" tools:ignore="MissingTranslation">
        Force English language
    </string>
    <!-- Localization is enabled -->
    <string name="pref_disable_localization_off" tools:ignore="MissingTranslation">
        Use language localization if available
    </string>

    <!-- Contact group preference -->
    <string name="pref_contact_group" tools:ignore="MissingTranslation">
        Contact group
    </string>
    <string name="pref_no_contact_group_selected" tools:ignore="MissingTranslation">
        — All contacts —
    </string>

</resources>